# academic-solution-engine

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
bible/: 08_deferred_features_v3_2.md  09_deferred_solvers_v3_2.md  45_test_data_T21_v3_2.json  46_test_data_integral_edge_cases_v3_2.json  47_golden_expected_v3_2.md  48_test_data_symbolic_v3_2.json  49_golden_expected_symbolic_v3_2.md  51_test_data_gradient_v3_2.json  52_golden_expected_gradient_v3_2.md  53_test_data_mixed_v3_2.json  54_golden_expected_mixed_v3_2.md  55_file_handling_v3_2.md  60_expression_cleaner_v3_2.md  65_id_system_v3_2.md  70_display_system_v3_2.md  75_json_output_spec_v3_2.md  80_json_input_spec_v3_2.md  85_render_adapter_and_jinja2_spec_v3_2.md  90_phase1_scope_v3_2.md  91_phase2a_gradient_scope_v3_2.md  92_phase2bm_multisolver_scope_v3_2.md  99_project_overview_v3_2.md
templates/: base.tex.j2  item_component_group.tex.j2  item_error.tex.j2  item_gradient.tex.j2  item_output_group.tex.j2  item_standard.tex.j2  solucionario.tex.j2  solucionario_gradientes.tex.j2  solucionario_integrales.tex.j2
tests/: __init__.py  conftest.py  test_adapter.py  test_aggregation.py  test_architecture.py  test_cleaner.py  test_cli.py  test_config_matches_bible.py  test_display_merge.py  test_extended_json.py  test_fileio.py  test_formatting.py  test_golden.py  test_golden_gradient.py  test_golden_mixed.py  test_golden_symbolic.py  test_ids.py  test_labels.py  test_migration_render_equivalence.py  test_pipeline.py  test_renderer_universal.py  test_solver_gradient.py  test_solver_integral.py  (+2 more)
(+21 files in other folders)
