[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solucionario"
version = "0.1.0"
description = "Phase 1 integral solution-manual generator (academic-solution-engine)"
requires-python = ">=3.11"
dependencies = [
    "sympy",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
